[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/ship.gd" type="Script" id=2]
[ext_resource path="res://sounds/thrusters.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/turning.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/bump.wav" type="AudioStream" id=5]
[ext_resource path="res://Dynastium-Kjvy.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1072.81, 669.49 )

[node name="ship" type="KinematicBody2D"]
rotation = 6.28319
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 1 )

[node name="bullet_spawn" type="Node2D" parent="."]
position = Vector2( 0, -38.9559 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true

[node name="thrusters" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.5

[node name="turning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -521.0
margin_top = -314.0
margin_right = 552.0
margin_bottom = 334.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nodes" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -503.0
margin_top = 226.0
margin_right = 511.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 2 )
text = "Nodes Collected:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="disable_moves" type="Timer" parent="."]
autostart = true

[node name="front" type="Area2D" parent="."]
position = Vector2( -0.00146596, -328.221 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="front"]
position = Vector2( -0.00152226, -340.826 )
shape = SubResource( 3 )

[node name="back" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="back"]
position = Vector2( 1.41721, 677.146 )
shape = SubResource( 3 )

[connection signal="timeout" from="disable_moves" to="." method="_on_disable_moves_timeout"]
[connection signal="area_entered" from="front" to="." method="_on_front_area_entered"]
[connection signal="area_entered" from="back" to="." method="_on_back_area_entered"]
